--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,12 +144,8 @@ jobs:
         run: |
           zip build/Retr0Mine_linux_64.zip build/Retr0Mine
 
-      - name: List files for debug
-        run: |
-          ls -lh build/
-
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Retr0Mine_linux_64
-          path: Retr0Mine_linux_64.zip
+          path: build/Retr0Mine_linux_64.zip
