--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
           arch: x64
 
       - name: Install Qt
+        id: qt
         uses: jurplel/install-qt-action@v4
         with:
           version: '6.8.1'
@@ -131,6 +132,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential libgl1-mesa-dev fuse libfuse2
+          # Configure FUSE for the current user
           sudo modprobe fuse
           sudo groupadd fuse || true
           sudo usermod -a -G fuse $USER
@@ -171,11 +173,20 @@ jobs:
           chmod +x linuxdeploy*.AppImage
 
       - name: Create AppImage
-        env:
-          QMAKE: ${{ env.Qt6_DIR }}/bin/qmake6
-          QML_SOURCES_PATHS: ${{ github.workspace }}/Resources/qml
         run: |
+          # Debug Qt installation
+          which qmake
+          which qmake6
+          echo "Current PATH: $PATH"
+          
+          # Set environment variables
+          export QMAKE=$(which qmake6)
+          export QML_SOURCES_PATHS=${{ github.workspace }}/Resources/qml
           export OUTPUT="Retr0Mine-x86_64.AppImage"
+          
+          echo "Using QMAKE: $QMAKE"
+          
+          # Create AppImage
           ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage
 
       - name: Upload AppImage
