--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -189,11 +189,22 @@ jobs:
           # Create AppImage
           ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage
 
+      - name: Zip binary
+        run: |
+          cd build
+          zip Retr0Mine_linux_64.zip Retr0Mine
+
       - name: Upload AppImage
         uses: actions/upload-artifact@v4
         with:
           name: Retr0Mine_AppImage
           path: Retr0Mine-x86_64.AppImage
+
+      - name: Upload plain binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: Retr0Mine_linux_64
+          path: build/Retr0Mine_linux_64.zip
 
       - name: Upload plain binary (as before)
         uses: actions/upload-artifact@v4
