Added icon to installer

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,7 @@ jobs:
           name: Retr0Mine_msvc_64
           path: build/Retr0Mine_msvc_64.zip
 
-      - name: Create Installer
+      - name: Create Installer 
         shell: pwsh
         run: |
           $env:Path += ";${env:ProgramFiles(x86)}\Inno Setup 6"
@@ -123,7 +123,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Retr0Mine_Setup
-          path: Output/Retr0Mine_Setup.exe
+          path: Output/Retr0Mine_Installer.exe
 
   linux-build:
     runs-on: ubuntu-latest
