fix appimage env, updated release wf

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -17,13 +16,13 @@ jobs:
           arch: x64
 
       - name: Install Qt
+        id: qt
         uses: jurplel/install-qt-action@v4
         with:
           version: '6.8.1'
           add-tools-to-path: true
           cache: true
           modules: 'qtmultimedia'
-
 
       - name: Install jom
         id: jom-setup
@@ -112,6 +111,18 @@ jobs:
           name: Retr0Mine_msvc_64
           path: build/Retr0Mine_msvc_64.zip
 
+      - name: Create Installer 
+        shell: pwsh
+        run: |
+          $env:Path += ";${env:ProgramFiles(x86)}\Inno Setup 6"
+          iscc.exe installer.iss
+
+      - name: Upload Installer
+        uses: actions/upload-artifact@v4
+        with:
+          name: Retr0Mine_Installer
+          path: Output/Retr0Mine_Installer.exe
+
   linux-build:
     runs-on: ubuntu-latest
 
@@ -130,7 +141,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential libgl1-mesa-dev
+          sudo apt-get install -y build-essential libgl1-mesa-dev fuse libfuse2
+          # Configure FUSE for the current user
+          sudo modprobe fuse
+          sudo groupadd fuse || true
+          sudo usermod -a -G fuse $USER
 
       - name: Build with qmake
         run: |
@@ -139,17 +154,84 @@ jobs:
           qmake ../Retr0Mine.pro CONFIG+=release
           make -j$(nproc)
 
-      - name: Zip binaries folder
+      - name: Create AppDir structure
         run: |
-          zip build/Retr0Mine_linux_64.zip build/Retr0Mine
+          mkdir -p AppDir/usr/bin
+          mkdir -p AppDir/usr/lib
+          mkdir -p AppDir/usr/share/applications
+          mkdir -p AppDir/usr/share/icons/hicolor/256x256/apps
+          cp build/Retr0Mine AppDir/usr/bin/
+          
+          # Create .desktop file without env in Exec
+          cat > AppDir/usr/share/applications/Retr0Mine.desktop << EOF
+          [Desktop Entry]
+          Name=Retr0Mine
+          Exec=Retr0Mine
+          Icon=Retr0Mine
+          Type=Application
+          Categories=Game;
+          Comment=Minesweeper game
+          X-AppImage-Integrate=false
+          EOF
+          
+          # Create wrapper script to set QT_QPA_PLATFORM
+          cat > AppDir/usr/bin/Retr0Mine.wrapper << EOF
+          #!/bin/bash
+          export QT_QPA_PLATFORM=xcb
+          exec "\$(dirname "\${BASH_SOURCE[0]}")/Retr0Mine.real" "\$@"
+          EOF
+          
+          # Make wrapper executable
+          chmod +x AppDir/usr/bin/Retr0Mine.wrapper
+          
+          # Rename original executable and make wrapper the main executable
+          mv AppDir/usr/bin/Retr0Mine AppDir/usr/bin/Retr0Mine.real
+          mv AppDir/usr/bin/Retr0Mine.wrapper AppDir/usr/bin/Retr0Mine
+          
+          # Copy application icon
+          cp Resources/icons/icon.png AppDir/usr/share/icons/hicolor/256x256/apps/Retr0Mine.png
+          
+      - name: Download linuxdeploy and plugins
+        run: |
+          wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+          wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
+          chmod +x linuxdeploy*.AppImage
 
-      - name: Upload Artifacts
+      - name: Create AppImage
+        run: |
+          # Debug Qt installation
+          which qmake
+          which qmake6
+          echo "Current PATH: $PATH"
+          
+          # Set environment variables
+          export QMAKE=$(which qmake6)
+          export QML_SOURCES_PATHS=${{ github.workspace }}/Resources/qml
+          export OUTPUT="Retr0Mine-x86_64.AppImage"
+          
+          echo "Using QMAKE: $QMAKE"
+          
+          # Create AppImage
+          ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage
+
+      - name: Zip binary
+        run: |
+          cd build
+          zip Retr0Mine_linux_64.zip Retr0Mine
+
+      - name: Upload AppImage
+        uses: actions/upload-artifact@v4
+        with:
+          name: Retr0Mine_AppImage
+          path: Retr0Mine-x86_64.AppImage
+
+      - name: Upload plain binary
         uses: actions/upload-artifact@v4
         with:
           name: Retr0Mine_linux_64
           path: build/Retr0Mine_linux_64.zip
-
-  release:
+          
+release:
     runs-on: ubuntu-latest
     needs: [build, linux-build]
 
@@ -157,15 +239,25 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download Windows artifact
+      - name: Download Windows ZIP
         uses: actions/download-artifact@v4
         with:
           name: Retr0Mine_msvc_64
 
-      - name: Download Linux artifact
+      - name: Download Windows Installer
+        uses: actions/download-artifact@v4
+        with:
+          name: Retr0Mine_Installer
+
+      - name: Download Linux ZIP
         uses: actions/download-artifact@v4
         with:
           name: Retr0Mine_linux_64
+
+      - name: Download AppImage
+        uses: actions/download-artifact@v4
+        with:
+          name: Retr0Mine_AppImage
 
       - name: Bump version and create release
         id: bump_release
@@ -205,7 +297,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload Windows release asset
+      - name: Upload Windows ZIP asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -215,19 +307,32 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: List files in directory
-        run: ls -la
+      - name: Upload Windows Installer asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: Retr0Mine_installer.exe
+          asset_name: Retr0Mine_installer.exe
+          asset_content_type: application/vnd.microsoft.portable-executable
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      #- name: Zip binaries folder
-      #  run: |
-      #    zip ./Retr0Mine_linux_64.zip ./Retr0Mine
-
-      - name: Upload Linux release asset
+      - name: Upload Linux ZIP asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_name: Retr0Mine_linux_64.zip
           asset_path: Retr0Mine_linux_64.zip
           asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload AppImage asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: Retr0Mine-x86_64.AppImage
+          asset_name: Retr0Mine-x86_64.AppImage
+          asset_content_type: application/x-executable
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
