--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -216,7 +216,7 @@ jobs:
           name: Retr0Mine_linux_64
           path: build/Retr0Mine_linux_64.zip
           
-release:
+  release:
     runs-on: ubuntu-latest
     needs: [build, linux-build]
 
@@ -233,6 +233,7 @@ release:
         uses: actions/download-artifact@v4
         with:
           name: Retr0Mine_Installer
+          path: installer  # Add explicit path
 
       - name: Download Linux ZIP
         uses: actions/download-artifact@v4
@@ -296,8 +297,8 @@ release:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: Retr0Mine_installer.exe
-          asset_name: Retr0Mine_installer.exe
+          asset_path: installer/Retr0Mine_Installer.exe  # Update path to match downloaded artifact
+          asset_name: Retr0Mine_Installer.exe  # Keep consistent casing
           asset_content_type: application/vnd.microsoft.portable-executable
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
