--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -54,6 +54,11 @@ jobs:
           qmake ..\Retr0Mine.pro CONFIG+=release
           $jomPath = "${{ steps.jom-setup.outputs.jom_path }}"
           & "$jomPath\jom.exe"
+
+      - name: Copy Steam API DLL
+        shell: pwsh
+        run: |
+          Copy-Item "Dependencies\steam\lib\win64\steam_api64.dll" -Destination "build\release\"
           
       - name: Remove source and object files
         shell: pwsh
