--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           $buildDir = "build/release"
           if (Test-Path $buildDir) {
-              Get-ChildItem -Path $buildDir -Include *.cpp, *.h, *.obj, *.res, *.qm -Recurse | Remove-Item -Force
+              Get-ChildItem -Path $buildDir -Include *.cpp, *.h, *.obj, *.res, *.qm, *.qrc -Recurse | Remove-Item -Force
           } else {
               Write-Host "Directory not found: $buildDir"
           }
