--- a/.github/workflows/steam-builds.yml
+++ b/.github/workflows/steam-builds.yml
@@ -105,18 +105,11 @@ jobs:
               exit 1
           }
 
-      - name: Zip binaries folder
-        shell: pwsh
-        run: |
-          $zipFile = "build/Retr0Mine_msvc_64.zip"
-          $folder = "build/Retr0Mine"
-          Compress-Archive -Path $folder -DestinationPath $zipFile
-
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Retr0Mine_msvc_64
-          path: build/Retr0Mine_msvc_64.zip
+          name: Retr0Mine_Windows
+          path: build/Retr0Mine
 
   linux-build:
     runs-on: ubuntu-latest
@@ -179,38 +172,22 @@ jobs:
           wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
           chmod +x linuxdeploy*.AppImage
 
-      - name: Create AppImage
+      - name: Deploy with linuxdeploy
         run: |
-          # Debug Qt installation
-          which qmake
-          which qmake6
-          echo "Current PATH: $PATH"
-          
-          # Set environment variables
           export QMAKE=$(which qmake6)
           export QML_SOURCES_PATHS=${{ github.workspace }}/Resources/qml
-          export OUTPUT="Retr0Mine-x86_64.AppImage"
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/Dependencies/steam/lib/linux64
+          ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
 
-          echo "Using QMAKE: $QMAKE"
-          
-          # Create AppImage
-          ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage
-          chmod +x Retr0Mine-x86_64.AppImage
-
-      - name: Extract AppImage and upload squashfs-root
+      - name: Create startup script
         run: |
-          ./Retr0Mine-x86_64.AppImage --appimage-extract
-          mv squashfs-root Retr0Mine_squashfs
-
           echo '#!/bin/sh
           export LD_LIBRARY_PATH="./usr/lib:$LD_LIBRARY_PATH"
-          exec ./AppRun' > Retr0Mine_squashfs/Retr0Mine.sh
-          chmod +x Retr0Mine_squashfs/Retr0Mine.sh
+          exec ./AppRun' > AppDir/Retr0Mine.sh
+          chmod +x AppDir/Retr0Mine.sh
   
-      - name: Upload SquashFS Root
+      - name: Upload Build
         uses: actions/upload-artifact@v4
         with:
-          name: Retr0Mine_squashfs
-          path: Retr0Mine_squashfs
-  
+          name: Retr0Mine_linux
+          path: AppDir/*
