--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -146,8 +146,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential libgl1-mesa-dev fuse libfuse2
-          # Configure FUSE for the current user
+          sudo apt-get install -y build-essential libgl1-mesa-dev fuse libfuse2 libwayland-dev qt6-wayland
           sudo modprobe fuse
           sudo groupadd fuse || true
           sudo usermod -a -G fuse $USER
@@ -167,6 +166,8 @@ jobs:
           mkdir -p AppDir/usr/share/icons/hicolor/256x256/apps
           cp build/Retr0Mine AppDir/usr/bin/
           
+          #cp Dependencies/steam/lib/linux64/libsteam_api.so AppDir/usr/lib/
+
           # Create .desktop file
           cat > AppDir/usr/share/applications/Retr0Mine.desktop << EOF
           [Desktop Entry]
@@ -180,46 +181,37 @@ jobs:
           
           # Copy application icon
           cp Resources/icons/icon.png AppDir/usr/share/icons/hicolor/256x256/apps/Retr0Mine.png
-          
+
       - name: Download linuxdeploy and plugins
         run: |
           wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
           wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
           chmod +x linuxdeploy*.AppImage
 
-      - name: Create AppImage
+      - name: Deploy with linuxdeploy
         run: |
-          # Debug Qt installation
-          which qmake
-          which qmake6
-          echo "Current PATH: $PATH"
-          
-          # Set environment variables
           export QMAKE=$(which qmake6)
           export QML_SOURCES_PATHS=${{ github.workspace }}/Resources/qml
-          export OUTPUT="Retr0Mine-x86_64.AppImage"
-          
-          echo "Using QMAKE: $QMAKE"
-          
-          # Create AppImage
-          ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/Dependencies/steam/lib/linux64
+          ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
 
-      - name: Zip binary
+      - name: Create startup script
         run: |
-          cd build
-          zip Retr0Mine_linux_64.zip Retr0Mine
+          echo '#!/bin/sh
+          export LD_LIBRARY_PATH="./usr/lib:$LD_LIBRARY_PATH"
+          exec ./AppRun' > AppDir/Retr0Mine.sh
+          chmod +x AppDir/Retr0Mine.sh
 
-      - name: Upload AppImage
+      - name: Zip AppDir
+        run: |
+          cd AppDir
+          zip -r ../Retr0Mine_Linux.zip ./*
+
+      - name: Upload Build
         uses: actions/upload-artifact@v4
         with:
-          name: Retr0Mine_AppImage
-          path: Retr0Mine-x86_64.AppImage
-
-      - name: Upload plain binary
-        uses: actions/upload-artifact@v4
-        with:
-          name: Retr0Mine_linux_64
-          path: build/Retr0Mine_linux_64.zip
+          name: Retr0Mine_Linux
+          path: Retr0Mine_Linux.zip
           
   release:
     runs-on: ubuntu-latest
@@ -240,15 +232,10 @@ jobs:
           name: Retr0Mine_Installer
           path: installer 
 
-      - name: Download Linux ZIP
+      - name: Download Linux Build
         uses: actions/download-artifact@v4
         with:
-          name: Retr0Mine_linux_64
-
-      - name: Download AppImage
-        uses: actions/download-artifact@v4
-        with:
-          name: Retr0Mine_AppImage
+          name: Retr0Mine_Linux
 
       - name: Download Steam Deck Installer Desktop File
         run: |
@@ -306,29 +293,19 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: installer/Retr0Mine_Installer.exe  # Update path to match downloaded artifact
-          asset_name: Retr0Mine_Installer.exe  # Keep consistent casing
+          asset_path: installer/Retr0Mine_Installer.exe 
+          asset_name: Retr0Mine_Installer.exe  
           asset_content_type: application/vnd.microsoft.portable-executable
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload Linux ZIP asset
+      - name: Upload Linux Build asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_name: Retr0Mine_linux_64.zip
-          asset_path: Retr0Mine_linux_64.zip
-          asset_content_type: application/octet-stream
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload AppImage asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: Retr0Mine-x86_64.AppImage
-          asset_name: Retr0Mine-x86_64.AppImage
-          asset_content_type: application/x-executable
+          asset_path: Retr0Mine_Linux.zip
+          asset_name: Retr0Mine_Linux.zip
+          asset_content_type: application/zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
