--- a/.github/workflows/steam-builds.yml
+++ b/.github/workflows/steam-builds.yml
@@ -189,5 +189,5 @@ jobs:
       - name: Upload Build
         uses: actions/upload-artifact@v4
         with:
-          name: Retr0Mine_linux
+          name: Retr0Mine_Linux
           path: AppDir/*
