--- a/.github/workflows/steam-builds.yml
+++ b/.github/workflows/steam-builds.yml
@@ -3,7 +3,7 @@ name: Steam build linux and windows
 on:
   push:
     branches:
-      - main
+      - linuxExperiment
 
 jobs:
   build:
@@ -177,6 +177,7 @@ jobs:
           export QMAKE=$(which qmake6)
           export QML_SOURCES_PATHS=${{ github.workspace }}/Resources/qml
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/Dependencies/steam/lib/linux64
+          export EXTRA_QT_MODULES="multimedia"
           ./linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt
 
       - name: Create startup script
