--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -205,6 +205,12 @@ jobs:
           exec ./AppRun' > AppDir/Retr0Mine.sh
           chmod +x AppDir/Retr0Mine.sh
 
+      - name: Clean unnecessary files
+        run: |
+          rm -rf AppDir/usr/translations
+          rm -rf AppDir/usr/plugins/tls
+          rm -rf AppDir/usr/plugins/imageformats
+          
       - name: Zip AppDir
         run: |
           cd AppDir
