--- a/.github/workflows/steam-builds.yml
+++ b/.github/workflows/steam-builds.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+env:
+  QT_VERSION: '6.8.2'
+
 jobs:
   build:
     runs-on: windows-latest
@@ -21,7 +24,7 @@ jobs:
         id: qt
         uses: jurplel/install-qt-action@v4
         with:
-          version: '6.8.1'
+          version: ${{ env.QT_VERSION }}
           add-tools-to-path: true
           cache: true
           modules: 'qtmultimedia'
@@ -42,7 +45,7 @@ jobs:
           $jomExe = "$jomDir\jom.exe"
           if (Test-Path $jomExe) {
             Write-Output "JOM Path: $jomDir"
-            Write-Output "::set-output name=jom_path::$jomDir"
+            "jom_path=$jomDir" >> $env:GITHUB_OUTPUT
           } else {
             Write-Error "jom.exe not found in $jomDir"
             exit 1
@@ -57,41 +60,31 @@ jobs:
           $jomPath = "${{ steps.jom-setup.outputs.jom_path }}"
           & "$jomPath\jom.exe"
           
+      - name: Clean release directory
+        shell: pwsh
+        run: |
+          cd build/release
+          Get-ChildItem -Exclude Retr0Mine.exe | Remove-Item -Recurse -Force
+
       - name: Copy Steam API DLL
         shell: pwsh
         run: |
           Copy-Item "Dependencies\steam\lib\win64\steam_api64.dll" -Destination "build\release\"
-          
-      - name: Remove source and object files
-        shell: pwsh
-        run: |
-          $buildDir = "build/release"
-          if (Test-Path $buildDir) {
-              Get-ChildItem -Path $buildDir -Include *.cpp, *.h, *.obj, *.res, *.qm, *.qrc -Recurse | Remove-Item -Force
-          } else {
-              Write-Host "Directory not found: $buildDir"
-          }
 
       - name: Deploy Qt
         shell: pwsh
         run: |
           cd build
-          $windeployqtPath = "D:\a\Retr0Mine\Qt\6.8.1\msvc2022_64\bin\windeployqt6.exe"
           $qmlDir = "D:\a\Retr0Mine\Retr0Mine\Resources\qml"
-          if (Test-Path $windeployqtPath) {
-              & $windeployqtPath `
-                  --skip-plugin-types designer,iconengines,qmllint,generic,networkinformation,help,qmltooling,sqldrivers,tls,qmlls `
-                  --no-opengl-sw `
-                  --no-system-dxc-compiler `
-                  --no-compiler-runtime `
-                  --no-translations `
-                  --no-system-d3d-compiler `
-                  --qmldir $qmlDir `
-                  D:\a\Retr0Mine\Retr0Mine\build\release\Retr0Mine.exe
-          } else {
-              Write-Error "windeployqt not found at the expected path!"
-              exit 1
-          }
+          windeployqt6 `
+              --skip-plugin-types designer,iconengines,qmllint,generic,networkinformation,help,qmltooling,sqldrivers,tls,qmlls `
+              --no-opengl-sw `
+              --no-system-dxc-compiler `
+              --no-compiler-runtime `
+              --no-translations `
+              --no-system-d3d-compiler `
+              --qmldir $qmlDir `
+              release\Retr0Mine.exe
 
       - name: Rename release folder
         shell: pwsh
@@ -121,7 +114,7 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
         with:
-          version: '6.8.1'
+          version: ${{ env.QT_VERSION }}
           host: 'linux'
           cache: true
           add-tools-to-path: true
