--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
 cmake_minimum_required(VERSION 3.16)
 project(Retr0Mine VERSION 1.0 LANGUAGES CXX)
-
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_DISABLE_FIND_PACKAGE_WrapVulkanHeaders TRUE)
 
-find_package(Qt6 REQUIRED COMPONENTS 
+find_package(Qt6 REQUIRED COMPONENTS
     Core
     Gui
     Qml
@@ -36,7 +35,7 @@ set(HEADERS
 )
 
 # Create the executable
-add_executable(${PROJECT_NAME}
+add_executable(appRetr0Mine
     ${SOURCES}
     ${HEADERS}
     resources/icons/icons.qrc
@@ -46,9 +45,10 @@ add_executable(${PROJECT_NAME}
     resources/appicon.rc
 )
 
-qt_add_qml_module(${PROJECT_NAME}
+qt_add_qml_module(appRetr0Mine
    URI Retr0Mine
    VERSION 1.0
+   NO_RESOURCE_TARGET_PATH
    QML_FILES
        qml/Main.qml
        qml/Colors.qml
@@ -82,20 +82,14 @@ qt_add_qml_module(${PROJECT_NAME}
        qml/+FluentWinUI3/DifficultyLayout.qml
 )
 
-# Translations
-set(TS_FILES
-    resources/translations/Retr0Mine_fr.ts
-    resources/translations/Retr0Mine_en.ts
-)
-
 # Set include directories
-target_include_directories(${PROJECT_NAME} PRIVATE
+target_include_directories(appRetr0Mine PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/include/steam
 )
 
 # Link Qt libraries
-target_link_libraries(${PROJECT_NAME} PRIVATE
+target_link_libraries(appRetr0Mine PRIVATE
     Qt6::Core
     Qt6::Gui
     Qt6::Qml
@@ -105,24 +99,24 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 )
 
 # Handle translations
-qt_add_translations(${PROJECT_NAME}
+qt_add_translations(appRetr0Mine
     TS_FILES ${TS_FILES}
     RESOURCE_PREFIX "/translations"
 )
 
 # Platform specific settings
 if(WIN32)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE
-        _CRT_SECURE_NO_WARNINGS
+    target_compile_definitions(appRetr0Mine PRIVATE
+        *CRT*SECURE_NO_WARNINGS
     )
-    target_compile_options(${PROJECT_NAME} PRIVATE
+    target_compile_options(appRetr0Mine PRIVATE
         /wd4828
     )
-    target_link_libraries(${PROJECT_NAME} PRIVATE
+    target_link_libraries(appRetr0Mine PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/lib/steam/win64/steam_api64.lib
     )
 elseif(UNIX AND NOT APPLE)
-    target_link_libraries(${PROJECT_NAME} PRIVATE
+    target_link_libraries(appRetr0Mine PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/lib/steam/linux64/libsteam_api.so
     )
 endif()
